--- a/references.bib
+++ b/references.bib
@@ -132,6 +132,14 @@
   year = {2022},
   month = {March},
   url = {https://reddit.com/r/CreditCards/comments/t5ihr4/gap_card_changing_from_synchrony_to_barclays/}
+},
+@blog{granger2011,
+  title = {Testing for Granger Causality},
+  author = {Giles, Dave},
+  year = {2011},
+  month = {April},
+  day = {29},
+  url = {https://davegiles.blogspot.com/2011/04/testing-for-granger-causality.html}
 }
 
-
+#Hierarchical modeling and analysis for spatial data
