--- a/references.bib
+++ b/references.bib
@@ -15,6 +15,13 @@
   pages = {97–111},
   numpages = {15}
 },
+@website{fred,
+  author = {Federal Reserve Bank of St. Louis},
+  publisher = {Federal Reserve Bank of St. Louis},
+  year = {2023},
+  title = {Federal Reserve Economic Data},
+  url = {https://fred.stlouisfed.org/}
+},
 @website{ffiec,
   author = {FFIEC},
   publisher = {Federal Financial Institutions Examination Council},
@@ -140,6 +147,17 @@
   month = {April},
   day = {29},
   url = {https://davegiles.blogspot.com/2011/04/testing-for-granger-causality.html}
+},
+@article{taghiyeh2021,
+  title = {Loss rate forecasting framework based on macroeconomic changes: Application to US credit card industry},
+  author = {Taghiyeh, Sajjad and Lengacher, David C. and Handfield, Robert B.},
+  journal = {Expert Systems With Applications},
+  volume = {165},
+  year = {2021},
+  month = {March},
+  publisher = {Elsevier},
+  url = {https://doi.org/10.1016/j.eswa.2020.113954}
 }
+https://theeffectbook.net/
 
 #Hierarchical modeling and analysis for spatial data
