--- a/model_arima.qmd
+++ b/model_arima.qmd
@@ -2,6 +2,136 @@
 title: "ARIMA"
 format: html
 ---
+
+For an observation we start with the assumption that it is a constitutent of: Trend + Seasonality + Portfolio 
+
+Portfolio is used to explain the Bank specific credit card business decisions. 
+
+
+Below approaches to filter out the Trend and Seasonality; the residuals will be Portfolio constitutent.
+1. Take the mean / median of the BankType
+2. STL at the BankType group level
+3. STL at the Bank Individual level
+4. ARIMA at the BankType group level
+5. ARIMA at the Bank Individual level
+
+Try with US economic exog variables
+
+
+
+
+```{r}
+source('functions.R')
+
+exog_us_economic_qtr <- us_economy() |>
+                        mutate(RRSFS.Pop = RRSFS/POPTHM,                      
+                               Quarter = yearquarter(Month)) |>
+                        index_by(Quarter) |>
+                        select(RRSFS.Pop, UNRATE) |>
+                        summarise(across(-Month, mean)) |>
+                        mutate(across(-Quarter, ~difference(.))) |>
+                        mutate(RRSFS.Pop.lag1 = lag(RRSFS.Pop),
+                               UNRATE.lag1  = lag(UNRATE)) |>
+                        filter_index(get_regulation_cutoff() ~ .)                          
+
+
+deliquent_data <- credit_card.overdue_3089(apply_bank_filters = TRUE, post_regulation = TRUE) |> left_join(exog_us_economic_qtr, by = join_by(Quarter)) |> na.omit(value_diff)
+
+deliquent_data_agg <- deliquent_data |> 
+            group_by(BankType) |>
+            summarise(value_diff.mean = mean(value_diff, na.rm = TRUE),
+                      value_diff.median = median(value_diff, na.rm = TRUE),
+                      RRSFS.Pop.mean = mean(RRSFS.Pop),
+                      RRSFS.Pop.lag1.mean = mean(RRSFS.Pop.lag1),
+                      UNRATE.mean = mean(UNRATE),
+                      UNRATE.lag1.mean = mean(UNRATE.lag1),
+                    ) |> na.omit(value_diff.mean)
+
+
+
+fit_agg <- deliquent_data_agg |> 
+              model(
+                  stl = STL(value_diff.mean),
+                  ets = ETS(value_diff.mean ~ trend("A")),
+                  arima = ARIMA(value_diff.mean),
+                  arima_rrsfs = ARIMA(value_diff.mean ~ 1 + RRSFS.Pop.mean + RRSFS.Pop.lag1.mean),
+                  arima_rrsfs_unrate = ARIMA(value_diff.mean ~ 1 + RRSFS.Pop.mean + RRSFS.Pop.lag1.mean + UNRATE.mean + UNRATE.lag1.mean)
+              )
+
+augmented_agg_data <- fit_agg |>
+                    augment()       
+
+
+augmented_agg_data |>  
+    autoplot(.fitted, aes(colour = .model)) + 
+        theme(legend.position = "top") + facet_wrap(~ BankType, scales = "free_y", ncol=2) +
+        geom_line(mapping = aes(y = value_diff.mean), data = augmented_agg_data,
+                  colour = 'darkslategrey')                    
+
+
+fit_agg |>
+  select(-stl) |>
+  glance() |> View()
+#########################
+
+fit <- deliquent_data|> 
+        model(
+            stl = STL(value_diff),
+            ets = ETS(value_diff ~ trend("A")),
+            arima = ARIMA(value_diff),
+            arima_rrsfs = ARIMA(value_diff ~ 1 + RRSFS.Pop + RRSFS.Pop.lag1),
+            arima_rrsfs_unrate = ARIMA(value_diff ~ 1 + RRSFS.Pop + RRSFS.Pop.lag1 + UNRATE + UNRATE.lag1)
+        )
+
+fit |> View()
+
+fit |>
+  glance() 
+
+fit |>
+  select(BankType, BankName, arima_rrsfs) |>
+  coef() |> View()
+
+fit |>
+  filter(BankName == "BARCLAYS BANK DELAWARE (2980209)") |>
+  select(arima) |>
+  report() 
+
+augmented_data <- fit |>
+                    augment()
+
+augmented_data |> View()
+
+augmented_data |>
+  ggplot(aes(x = .innov)) +
+  geom_histogram() +
+  labs(title = "Histogram of residuals")   
+
+augmented_data |>  
+  filter(BankType == "LargeCreditCardBank") |>                 
+    autoplot(.fitted, aes(colour = .model)) + 
+        theme(legend.position = "top") + facet_wrap(~ BankName, scales = "free_y", ncol=2) +
+        geom_line(mapping = aes(y = value_diff), data = augmented_data |> filter(BankType == "LargeCreditCardBank"),
+                  colour = 'darkslategrey') 
+
+augmented_data |>  
+  filter(BankType == "LargeCreditCardBank", .model == "arima_rrsfs_unrate") |>                 
+    autoplot(.innov, aes(colour = .model)) + 
+        theme(legend.position = "top") + facet_wrap(~ BankName, scales = "free_y", ncol=2) +
+        geom_line(mapping = aes(y = value_diff), data = augmented_data |> filter(BankType == "LargeCreditCardBank",.model == "arima_rrsfs_unrate"),
+                  colour = 'darkslategrey')   +
+        geom_line(mapping = aes(y = .fitted), data = augmented_data |> filter(BankType == "LargeCreditCardBank",.model == "arima_rrsfs_unrate"),
+                  colour = 'lightgreen')                                      
+        
+augmented_data |>  
+  filter(BankType == "LargeBank") |>                 
+    autoplot(.innov) + 
+        theme(legend.position = "top") + facet_wrap(~ BankName, scales = "free", ncol=4) + theme(legend.position = "top")
+```
+
+
+
+
 ```{r}
 #https://cran.r-project.org/web/packages/fable/vignettes/fable.html
 source('functions.R')
